Add clock bento background style
